--- a/dh-maquinaria-usuario.yml
+++ b/dh-maquinaria-usuario.yml
@@ -10,5 +10,5 @@ server:
 
 message: Service for usuario is alive!
 
-max_login_fail: 3
-domain_mail_enabled: {"@outlook.com", "@gmail.com", "@digitalhouse.com"}
+${max_login_fail}: 3
+${domain_mail_enabled}: {"@outlook.com", "@gmail.com", "@digitalhouse.com"}
