--- a/dh-maquinaria-usuario.yml
+++ b/dh-maquinaria-usuario.yml
@@ -8,7 +8,7 @@ spring:
 server:
   port: ${PORT:9999}
 
-message: Service for usuario is alive!
+message: "Service for usuario is alive!"
 
 max_login_fail: 3
 domain_mail_enabled: {"@outlook.com", "@gmail.com", "@digitalhouse.com"}
