--- a/dh-maquinaria-usuario.yml
+++ b/dh-maquinaria-usuario.yml
@@ -11,4 +11,4 @@ server:
 message: "Service for usuario is alive!"
 
 max_login_fail: 3
-domain_mail_enabled: {"@outlook.com", "@gmail.com", "@digitalhouse.com"}
+domain_mail_enabled: ["@outlook.com", "@gmail.com", "@digitalhouse.com"]
