--- a/zoezn-banco-service.yml
+++ b/zoezn-banco-service.yml
@@ -12,4 +12,5 @@ message: "Service for banco is alive!"
 
 
 max_efectivo: 2000.00
-denominaciones_billetes: "10,20, 50, 100"
+#denominaciones_billetes: "10,20, 50, 100"
+denominaciones_billetes: ["10","20","50","100"]
