--- a/ms-gateway.yml
+++ b/ms-gateway.yml
@@ -20,10 +20,10 @@ spring:
           uri: lb://ms-subscription
           predicates:
             - Path=/subscription/**
-        - id: mssubscriptiondivide
+        - id: mssubscriptioncharacters
           uri: lb://ms-subscription
           predicates:
-            - Path=/subscription/divide
+            - Path=/subscription/characters
 
 info:
   app:
