--- a/gateway.yml
+++ b/gateway.yml
@@ -10,10 +10,14 @@ spring:
         locator:
           enabled: true
       routes:
-        - id: mscourse
-          uri: lb://ms-course
+        - id: music
+          uri: lb://music
           predicates:
-            - Path=/course/**
+            - Path=/api/v1/musics**
+        - id: playlist
+          uri: lb://playlist
+          predicates:
+            - Path=/api/v1/playLists**
 
 info:
   app:
